<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/>
    </parent>

    <groupId>com.platform</groupId>
    <artifactId>microservice-platform</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>microservice-platform</name>
    <description>Mytel CRBT - AI Ringtone Microservice Platform</description>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <spring-cloud.version>2023.0.1</spring-cloud.version>
        <resilience4j.version>2.2.0</resilience4j.version>
        <redisson.version>3.27.2</redisson.version>
        <minio.version>8.5.10</minio.version>
        <testcontainers.version>1.19.7</testcontainers.version>
        <flyway.version>9.22.3</flyway.version>
        <springdoc.version>2.5.0</springdoc.version>
    </properties>

    <modules>
        <!-- Common SDK -->
        <module>common/common-core</module>
        <module>common/common-security</module>
        <module>common/common-ai-sdk</module>
        <module>common/common-rmq</module>
        <!-- Infrastructure -->
        <module>infrastructure/eureka-server</module>
        <module>infrastructure/config-server</module>
        <module>infrastructure/api-gateway</module>
        <!-- monitoring-server holds container/config assets, not Maven module -->
        <!-- Infra-Services -->
        <module>infra-services/auth-service</module>
        <module>infra-services/notification-service</module>
        <module>infra-services/file-service</module>
        <module>infra-services/audit-log-service</module>
        <module>infra-services/payment-gateway-service</module>
        <module>infra-services/credit-wallet-service</module>
        <!-- Business-Services -->
        <module>business-services/crbt-campaign-service</module>
        <module>business-services/crbt-community-library</module>
        <module>business-services/audio-generation-service</module>
        <module>business-services/crbt-credit-transaction-service</module>
        <module>business-services/crbt-core-adapter</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Internal common modules -->
            <dependency>
                <groupId>com.platform</groupId>
                <artifactId>common-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.platform</groupId>
                <artifactId>common-security</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.platform</groupId>
                <artifactId>common-ai-sdk</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.platform</groupId>
                <artifactId>common-rmq</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- Third-party -->
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-spring-boot3</artifactId>
                <version>${resilience4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson-spring-boot-starter</artifactId>
                <version>${redisson.version}</version>
            </dependency>
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
